crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@303.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create index ab_a2_b3_a_idx on ab_a2_b3 (a);
---
IndexStmt@0..44
  Create@0..6 "create"
  Whitespace@6..7 " "
  Index@7..12 "index"
  Whitespace@12..13 " "
  Ident@13..27 "ab_a2_b3_a_idx"
  Whitespace@27..28 " "
  On@28..30 "on"
  Whitespace@30..31 " "
  RangeVar@31..39
    Ident@31..39 "ab_a2_b3"
  Whitespace@39..40 " "
  Ascii40@40..41 "("
  IndexElem@41..42
    Ident@41..42 "a"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

