crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@31.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table rlp_default_30 partition of rlp_default for values in (30);
---
CreateStmt@0..72
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..27
    Ident@13..27 "rlp_default_30"
  Whitespace@27..28 " "
  Partition@28..37 "partition"
  Whitespace@37..38 " "
  Of@38..40 "of"
  Whitespace@40..41 " "
  RangeVar@41..52
    Ident@41..52 "rlp_default"
  Whitespace@52..53 " "
  For@53..56 "for"
  Whitespace@56..57 " "
  Values@57..63 "values"
  Whitespace@63..64 " "
  PartitionBoundSpec@64..70
    InP@64..66 "in"
    Whitespace@66..67 " "
    Ascii40@67..68 "("
    AConst@68..70
      Iconst@68..70 "30"
  Ascii41@70..71 ")"
  Ascii59@71..72 ";"

