crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@315.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into lprt_a values(3),(3);"
---
InsertStmt@0..33
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..18
    Ident@12..18 "lprt_a"
  Whitespace@18..19 " "
  SelectStmt@19..31
    Values@19..25 "values"
    Ascii40@25..26 "("
    List@26..27
      AConst@26..27
        Iconst@26..27 "3"
    Ascii41@27..28 ")"
    Ascii44@28..29 ","
    Ascii40@29..30 "("
    List@30..31
      AConst@30..31
        Iconst@30..31 "3"
  Ascii41@31..32 ")"
  Ascii59@32..33 ";"

