crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@316.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select explain_parallel_append('select avg(ab.a) from ab inner join lprt_a a on ab.a = a.a where a.a in(1, 0, 3)');"
---
SelectStmt@0..115
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..113
    FuncCall@7..113
      Ident@7..30 "explain_parallel_append"
      Ascii40@30..31 "("
      AConst@31..113
        Sconst@31..113 "'select avg(ab.a) fro ..."
  Ascii41@113..114 ")"
  Ascii59@114..115 ";"

